# nos

./: .gitignore  .golanci.yaml  .golangci.yaml  .licenserc.yaml  404.html  LICENSE  Makefile  README.md  go.mod  go.sum  requirements.txt  setup.py  sitemap.xml
.github/workflows/: .reusable-build.yaml  build-gpu-partitioner.yml  build-latest.yml  build-mig-agent.yml  build-mig-handler.yml  build-ts-agent.yml  build-version.yml  build.yml  ci.yml  helm-charts.yml  main.yml  test.yml
cmd/migagent/: main.go  (+1 more)
demo-kserve/: README.md
demo-rabbitmq/: Makefile
demos/demo-jupyter/: .gitignore  Dockerfile  Makefile  kernel.json  kind.yaml  pyproject.toml  requirements.txt  setup.py
demos/demo-jupyter/manifests/: cluster-issuer.yaml  enterprise-gateway-values.yaml  nginx-ingress-values.yaml
demos/demo-jupyter/n8s/: kernel.py  main.py  provisioner.py  tests.py
doc/: automatic-gpu-partitioning.md  elastic-quota.md  gpu-partitioner.md  mig-gpu-partitioner.md  pull-images.md
docs/: automatic-gpu-partitioning.md  elastic-quota.md  mkdocs.yaml  pull-images.md
hack/: generate-helm-docs.sh  generate-scheduler.sh
helm-charts/: mkdocs.yaml
installation/: index.html
nebulgym/: base.py
operator/: Dockerfile  Makefile  PROJECT  go.mod  go.sum  main.go
overview/: index.html
prerequisites/: index.html
search/: search_index.json
services/model-optimizer/: Dockerfile  pyproject.toml  pytest.ini
services/model-optimizer/optimizer/: __main__.py  cli.py  models.py  services.py
services/model-optimizer/tests/: test_cli.py  test_services.py
telemetry/: index.html
(+980 files in other folders)
