[tool.poetry]
name = "model-optimizer"
version = "0.0.1"
description = ""
authors = ["Michele Zanotti <m.zanotti019@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
typer = "^0.4.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
