[tool.poetry]
name = "optimizer"
version = "0.0.1"
description = ""
authors = ["Michele Zanotti <m.zanotti019@gmail.com>"]

[tool.poetry.scripts]
optimizer = "optimizer:main"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
loguru = "^0.6.0"
azure-storage-blob = "^12.12.0"
azure-identity = "^1.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
